feat: PR11396_change_improvements

--- a/templates/components/itilobject/fields/global_validation.html.twig
+++ b/templates/components/itilobject/fields/global_validation.html.twig
@@ -61,10 +61,12 @@
          {{ fields.field(
             '_add_validation',
             validation.dropdownValidator({
-               'name': 'users_id_validate',
+               'prefix': '_validation_targets[0]',
                'entity': item.fields['entities_id'],
+               'itemtype_target': params['_validation_targets'][0]['itemtype_target'] ?? '',
+               'items_id_target': params['_validation_targets'][0]['items_id_target'] ?? '',
+               'groups_id': params['_validation_targets'][0]['groups_id'] ?? '',
                'right': validation_right,
-               'users_id_validate': params['users_id_validate'],
                'display': false,
                'disabled': (not canupdate),
             }|merge(required)),
